force-app/main/default/objects/Job_Posting__c/fields/Application_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Application_Quantity__c</fullName>
    <label>Application Quantity</label>
    <summaryForeignKey>Job_Application__c.Job_Posting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>