force-app/main/default/objects/Job_Posting__c/fields/Is_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Approver__c</fullName>
    <formula>$User.Id = Approver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Approver</label>
    <type>Checkbox</type>
</CustomField>