force-app/main/default/objects/Job_Posting__c/fields/Is_Owner_or_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_or_Recruiter__c</fullName>
    <formula>OR(
    $User.Id = OwnerId,
    $User.Id = Recruiter__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner or Recruiter</label>
    <type>Checkbox</type>
</CustomField>