force-app/main/default/objects/Job_Posting__c/fields/Offer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted__c</fullName>
    <label>Offer Accepted</label>
    <summaryFilterItems>
        <field>Job_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Offer Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Job_Application__c.Job_Posting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>